--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,10 @@ main {
     gap: 2%;
 }
 
+main.productsGrid {
+    grid-template-columns: 30% 70%;
+}
+
 main article a {
     text-decoration: none;
     color: #000000;
@@ -349,7 +353,7 @@ p.socialmediaText {
 }
 
 article.productOverview {
-    width: 75%;
+    width: 90%;
     padding: 5%;
     border: 1px solid rgba(25, 25, 25, 0.5);
     box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.25);
@@ -361,7 +365,7 @@ ul.categories {
     padding-top: 40px;
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 65%;
     font-size: 1.652em;
 }
 
@@ -562,7 +566,11 @@ section.checkoutSummary .cartButton {
     /*main grid settings*/
     main {
         grid-template-columns: 1fr;
-        margin-bottom: 40px;
+        margin-bottom: 70px;
+    }
+
+    main.productsGrid {
+        grid-template-columns: 1fr;
     }
 
     .gridSectionOne {
@@ -686,6 +694,10 @@ section.checkoutSummary .cartButton {
         margin-bottom: 40px;
     }
 
+    main.productsGrid {
+        grid-template-columns: 1fr;
+    }
+
     .gridSectionOne {
         grid-area: 1 / 1 / 2 / 2;
     }
@@ -708,9 +720,9 @@ section.checkoutSummary .cartButton {
         width: 100%;
     }
 
-     ul.categories li {
+    ul.categories li {
         padding: 5px 10px 5px 10px;
-     }
+    }
 
     .productsPage {
         grid-template-columns: 1fr;
@@ -723,7 +735,7 @@ section.checkoutSummary .cartButton {
     }
 
     .productsPage img {
-        max-width: 150px;
+        width: 100%;
         height: auto;
     }
 
