--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ header {
 .headerLogo img {
     width: 100%;
     height: auto;
+    padding-left: 5px;
 }
 
 /*main navigation*/
@@ -523,6 +524,21 @@ section.checkoutSummary .cartButton {
     display: none;
 }
 
+/*video settings*/
+video {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.video {
+    width: 100%;
+    grid-area: 2 / 1 / 3 / 3;
+    justify-self: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
 @media screen and (max-width: 899px) and (min-width: 600px) {
     #hamburgerMenu {
         display: block;
@@ -648,7 +664,10 @@ section.checkoutSummary .cartButton {
         justify-self: center;
     }
 
-
+    /*video settings*/
+    .video {
+        grid-area: 3 / 1 / 4 / 2;
+    }
 }
 
 @media screen and (max-width: 599px) {
@@ -839,6 +858,11 @@ section.checkoutSummary .cartButton {
 
     footer {
         font-size: 50%;
+    }
+
+    /*video settings*/
+    .video {
+        grid-area: 3 / 1 / 4 / 2;
     }
 
 }
